--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.0",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-lottie": "^1.2.10",
+    "react-phone-input-2": "^2.15.1",
     "react-toastify": "^11.0.3",
     "swiper": "^8.4.7",
     "tailwindcss-pseudo-elements": "^2.0.0"
